--- a/pages/listado.html
+++ b/pages/listado.html
@@ -14,7 +14,7 @@
         ☰ Menú
       </button>
       <a class="navbar-brand ms-3 bg-danger" href="">
-        <img src="./imagenes/chulaind.png" alt="logotipo" class="container-sm">
+        <img src="../imagenes/chulaind.png" alt="logotipo" class="container-sm">
       </a>
     </div>
   </nav>
@@ -28,9 +28,9 @@
     </div>
     <div class="offcanvas-body">
       <ul class="nav bg-red flex-column justify-content-left">
-        <li class="nav-item"><a class="nav-link text-black" href="index.html" target="_blank">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link text-black" href="index.html" target="_blank">listado</a></li>
-        <li class="nav-item"><a class="nav-link text-black" href="contacto.html" target="_blank">contacto</a></li>
+        <li class="nav-item"><a class="nav-link text-black" href="../index.html" target="_blank">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link text-black" href="./listado.html" target="_blank">listado</a></li>
+        <li class="nav-item"><a class="nav-link text-black" href="./contacto.html" target="_blank">contacto</a></li>
         </ul>
     </div>
   </div>
@@ -48,13 +48,13 @@
   <div class="container mt-4">
     <main class="productos">
       <div class="d-flex flex-column mb-3 gap-3">
-        <a href="./index.html" class=" text-reset text-decoration-none">
-        <img src="./imagenes/producto1.png" alt="buzos" class="img-fluid rounded ">
+        <a href="../pages/contacto.html" class=" text-reset text-decoration-none">
+        <img src="../imagenes/producto1.png" alt="buzos" class="img-fluid rounded ">
         <p class="text-center fs-4">Buzo oversize distintos modelos</p></a>
 
-        <a href="./index.html" class=" text-reset text-decoration-none margin-top-3"><img src="./imagenes/producto2.png" alt="remeras" class="img-fluid rounded"><p class=" text-center fs-4">remera tokyo manga corta</p></a>
+        <a href="./index.html" class=" text-reset text-decoration-none margin-top-3"><img src="../imagenes/producto2.png" alt="remeras" class="img-fluid rounded"><p class=" text-center fs-4">remera tokyo manga corta</p></a>
 
-        <a href="./index.html" class=" text-reset text-decoration-none"><img src="./imagenes/producto3.png" alt="remera"class= "img-fluid rounded"><p class="text-center fs-4">remera berries brand</p></a>
+        <a href="./index.html" class=" text-reset text-decoration-none"><img src="../imagenes/producto3.png" alt="remera"class= "img-fluid rounded"><p class="text-center fs-4">remera berries brand</p></a>
       </div>
     </main>
   </div>
