--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         ☰ Menú
       </button>
       <a class="navbar-brand ms-3 bg-danger" href="">
-        <img src="../imagenes/chulaind.png" alt="logotipo" class="container-sm">
+        <img src="./imagenes/chulaind.png" alt="logotipo" class="container-sm">
       </a>
     </div>
   </nav>
