--- a/pages/listado.html
+++ b/pages/listado.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <title>listado de productos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css/main.css">
 </head>
 <header>
-    <nav class="navbar bg-danger navbar-$pink-400">
-    <div class="container-fluid">
-      <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
+  <nav class="navbar">
+      <div class="menu">
+        <div class="container-fluid">
+        <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
         ☰ Menú
-      </button>
-      <a class="navbar-brand ms-3 bg-danger" href="">
-        <img src="../imagenes/chulaind.png" alt="logotipo" class="container-sm">
-      </a>
-    </div>
-  </nav>
+        </button>
+        </div>
+      </div>
+      <div class="logo">
+        <a href="">
+        <img src="../imagenes/chulaind.png" alt="logotipo" >
+        </a>
+        </div>
+        </nav>
 </header>
 <body>
     <!-- Sidebar (Offcanvas) -->
