--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,33 +4,77 @@
     <meta charset="UTF-8">
     <title>contacto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css/main.css">
+    <link rel="stylesheet" href="../styles.css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="body1">
-    <header>
-        <img src="./imagenes/chulaind.png" alt="">
-       <nav class="barra de navegacion">
-            <ul>
-            <li><a href="index.html" target="_blank">inicio</a></li>
-            <li><a href="listado.html" target="_blank">listado</a></li>
-            <li><a href="contacto.html" target="_blank">contacto</a></li>
-        </ul>
-    </nav>
-    </header>
+<header>
+        <nav class="navbar">
+            <div class="menu">
+            <div class="">
+            <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
+            ☰ Menú
+            </button>
+            </div>
+            </div>
+            <div class="logo">
+            <a href="./listado.html">
+            <img src="../imagenes/chulaind.png" alt="logotipo" >
+            </a>
+            </div>
+        </nav>
+
+</header>
+    <body>
     <main class="main1">
         <section>
                  <a href="https://www.instagram.com/chula_indumentariaok" target="_blank" class="logotipo">
-                 <img src="imagenes/Instagram_logo_2022.png" alt="instagram"><p>instagram chula_indumentariaok</p>
+                 <img src="../imagenes/Instagram_logo_2022.png" alt="instagram">
                  </a>
-        </section>
-        <p>estamos ubicados a metros del arco de solares del norte</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4821.281393274835!2d-58.772036097641326!3d-34.42126238835501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1759937200231!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <footer>
-        todos los derechos reservados
+                 <a href="https://www.instagram.com/chula_indumentariaok" target="_blank" class="logotipo"><img src="../imagenes/facebook.png" alt="facebook"></a>
         
+        <p><strong>estamos ubicados a metros del arco de solares del norte</strong></p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4821.281393274835!2d-58.772036097641326!3d-34.42126238835501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1759937200231!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <form action="#" method="post">
+        <label for="nombre">Nombre:</label><br>
+        <input type="text" id="nombre" name="nombre"><br><br>
+
+        <label for="email">Correo electrónico (opcional):</label><br>
+        <input type="email" id="email" name="email"><br><br>
+
+        <label for="tema">Tema del comentario:</label><br>
+        <select id="tema" name="tema">
+            <option value="sugerencia">Sugerencia</option>
+            <option value="problema">Problema técnico</option>
+            <option value="queja">Queja</option>
+            <option value="felicitacion">Felicitación</option>
+            <option value="otro">Otro</option>
+        </select>
+        <br><br>
+
+        <label for="comentario">Descripción del comentario:</label><br>
+        <textarea id="comentario" name="comentario" rows="5" cols="40"></textarea><br><br>
+
+        <label>Nivel de satisfacción:</label><br>
+        <input type="range" id="satisfaccion" name="satisfaccion" min="0" max="10">
+        <br><br>
+
+        <label>¿Deseas recibir respuesta?</label><br>
+        <input type="radio" id="respuesta_si" name="respuesta" value="si">
+        <label for="respuesta_si">Sí</label><br>
+        <input type="radio" id="respuesta_no" name="respuesta" value="no">
+        <label for="respuesta_no">No</label><br><br>
+
+        <button type="submit">Enviar</button>
+    </form>
+        </section>
+    
+ <footer class="footer">
+        <p><strong>© 2025CHULAINDUMENTARIA TODOS LOS DERECHOS RESERVADOS ©</strong></p>
     </footer>
     </main>
+    <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
