--- a/pages/listado.html
+++ b/pages/listado.html
@@ -5,12 +5,12 @@
     <title>listado de productos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css/main.css">
+    <link rel="stylesheet" href="../styles.css/main.css">
 </head>
 <header>
   <nav class="navbar">
       <div class="menu">
-        <div class="container-fluid">
+        <div class="">
         <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
         ☰ Menú
         </button>
@@ -42,26 +42,50 @@
   <button type="button" class="btn btn-primary"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
   filtrar
-</button>
-<button type="button" class="btn btn-primary justify-content-center"
+  </button>
+  <button type="button" class="btn btn-primary justify-content-center"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
   buscar
-</button>
+  </button>
 
-  <!-- Contenido principal -->
-  <div class="container mt-4">
-    <main class="productos">
-      <div class="d-flex flex-column mb-3 gap-3">
-        <a href="../pages/contacto.html" class=" text-reset text-decoration-none">
-        <img src="../imagenes/producto1.png" alt="buzos" class="img-fluid rounded ">
-        <p class="text-center fs-4">Buzo oversize distintos modelos</p></a>
-
-        <a href="./index.html" class=" text-reset text-decoration-none margin-top-3"><img src="../imagenes/producto2.png" alt="remeras" class="img-fluid rounded"><p class=" text-center fs-4">remera tokyo manga corta</p></a>
-
-        <a href="./index.html" class=" text-reset text-decoration-none"><img src="../imagenes/producto3.png" alt="remera"class= "img-fluid rounded"><p class="text-center fs-4">remera berries brand</p></a>
+  <!-- Contenido principal//main-->
+  <div class="contenedor">
+  <main class="productos">
+    <div class="producto">
+      <a href="../pages/contacto.html">
+        <img src="../imagenes/producto1.png" alt="buzos">
+      </a>
+      <div class="parrafo">
+        <p>Buzo oversize distintos modelos</p>
+        <p><span>$72.000,00</span></p>
+        <p>11%off</p>
+        <p>$64.800,00</p>
       </div>
-    </main>
-  </div>
+    </div>
+    <div class="producto">
+      <a href="../index.html">
+        <img src="../imagenes/producto2.png" alt="remera">
+      </a>
+      <div class="parrafo">
+        <p>remera tokyo manga corta</p>
+        <p><span>$30.000,00</span></p>
+        <p>5%off</p>
+        <p>$27.500,00</p>
+      </div>
+    </div>
+    <div class="producto">
+      <a href="../index.html">
+        <img src="../imagenes/producto3.png" alt="remera">
+      </a>
+      <div class="parrafo">
+        <p>remera berries brand</p>
+        <p><span>$50.000,00</span></p>
+        <p>50%off</p>
+        <p>$25.000,00</p>
+      </div>
+    </div>
+  </main>
+</div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
